--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="app.js" defer></script>
+    <title>SiteSemana7e8DIW</title>
+
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+   
 </head>
+
 <body>
-    <h1>Olá mundo</h1>
+    <!--Cabecalho-->
+    <header class="header bg-primary p-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1 class="text-light">Brumadinho</h1>
+            <nav class="caixa-menuprincipal d-flex align-items-center gap-3">
+                <ul class="menu list-unstyled d-flex gap-3 mb-0">
+                    <li><a href="#" class="text-light">Home</a></li>
+                    <li><a href="#" class="text-light">Sobre</a></li>
+                    <li><a href="#" class="text-light">Contato</a></li>
+                </ul>
+                <div class="caixa-pesquisa d-flex">
+                    <input type="text" class="texto-pesquisa" placeholder="Pesquisar">
+                    <button class="btn btn-light ms-2">Ok</button>
+                </div>
+                <div class="login-cadastro ms-3">
+                    <button class="btn btn-light">Login</button>
+                    <button class="btn btn-success">Cadastre-se</button>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <!--imagem de destaque-->
+    <section>
+        <img class="destaque w-100" src="https://picsum.photos/1200/400" alt="">
+    </section>
+
+    <!--Conteudo principal-->
+    <main class="conteudo container my-5">
+        <section class="sobre mb-5">
+            <h2>Sobre a cidade</h2>
+            <p>Brumadinho é uma charmosa cidade mineira localizada a poucos quilômetros de Belo Horizonte, conhecida por
+                sua rica natureza, cultura e gastronomia típica de Minas Gerais. O município abriga o renomado Inhotim,
+                um dos maiores museus a céu aberto do mundo, que combina arte contemporânea e jardins botânicos de forma
+                única. Além disso, Brumadinho encanta os visitantes com suas paisagens de montanhas, cachoeiras e
+                trilhas ideais para o ecoturismo, oferecendo experiências de contato direto com a natureza e a
+                hospitalidade mineira.</p>
+        </section>
+
+        <section class="pontos-turisticos mb-5">
+            <h2>Pontos Turisticos</h2>
+            <div class="row">
+                <article class="card col-md-4 p-3">
+                    <h3>Ponto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                    <img src="https://picsum.photos/120/120" class="img-fluid" alt="">
+                </article>
+                <article class="card col-md-4 p-3">
+                    <h3>Ponto 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                    <img src="https://picsum.photos/120/120" class="img-fluid" alt="">
+                </article>
+                <article class="card col-md-4 p-3">
+                    <h3>Ponto 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                    <img src="https://picsum.photos/120/120" class="img-fluid" alt="">
+                </article>
+            </div>
+        </section>
+
+        <!--Eventos-->
+        <section class="eventos">
+            <h2>Dicas e próximos eventos</h2>
+            <div class="row">
+                <article class="card col-md-4 p-3">
+                    <h3>Evento 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                    <img src="https://picsum.photos/120/120" class="img-fluid" alt="">
+                </article>
+                <article class="card col-md-4 p-3">
+                    <h3>Evento 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                    <img src="https://picsum.photos/120/120" class="img-fluid" alt="">
+                </article>
+                <article class="card col-md-4 p-3">
+                    <h3>Evento 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                    <img src="https://picsum.photos/120/120" class="img-fluid" alt="">
+                </article>
+            </div>
+        </section>
+    </main>
+
+    <!--Rodape-->
+    <footer class="bg-primary text-light text-center p-3 mt-5">
+        <p>Copyright © 2025 Gabriel Bruno Cruz | Contato: email@exemplo.com</p>
+    </footer>
+    <script src="app.js"></script>
 </body>
+
+</html>
+
 </html>
