--- a/public/sobre.html
+++ b/public/sobre.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes do lugar</title>
+    <title>Sobre o Site</title>
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <!--Cabecalho-->
     <header class="header bg-primary p-3">
         <div class="container d-flex justify-content-around align-items-center">
-            <a href="index.html"><img id = "logo-site" src="img/logosite.png" alt=""></a>
+            <a href="index.html"><img id="logo-site" src="img/logosite.png" alt=""></a>
             <nav class="caixa-menuprincipal d-flex align-items-center gap-3 me-5">
                 <ul class="menu list-unstyled d-flex gap-5 mb-0 me-5">
                     <li><a href="index.html" class="text-light">Home</a></li>
@@ -29,37 +28,17 @@
             </nav>
         </div>
     </header>
-
-    <div id="tela"></div>
+    <h2 class="mt-4 mb-4 text-center">Sobre o Site</h2>
+    <img src="img/letreirobrumadinho.webp" class=" img-sobre mb-3 d-block mx-auto rounded shadow" alt="">
+    <p class="fonte-imagem text-center fst-italic mb-4">Fonte da imagem: em.com.br</p>
+    <div class="text-center mx-5 mb-5 fs-5">
+        <p>Este site foi desenvolvido para fornecer informações detalhadas sobre os principais pontos turísticos de Brumadinho, MG. Nosso objetivo é promover o turismo local, destacando a beleza natural, a história e a cultura da região.</p>
+        <p>Através de descrições detalhadas, imagens de alta qualidade e uma interface amigável, esperamos ajudar os visitantes a planejar suas viagens e explorar tudo o que Brumadinho tem a oferecer.</p>
+        <p>Agradecemos sua visita e esperamos que você aproveite ao máximo sua experiência em Brumadinho!</p>
+    </div>
     <!--Rodape-->
     <footer id="contato" class="bg-primary text-light text-center p-3 mt-5">
         <p>Copyright © 2025 Gabriel Bruno Cruz | Engenharia de Software | 1 Semestre | Contato: brumatrip@gmail.com</p>
     </footer>
-
-    <script src="app.js"></script>
-
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const id = params.get('id');
-        const lugar = lugares.find(l => l.id == id);
-        if (lugar) {
-            document.getElementById('tela').innerHTML = `
-                <h2 class=" titulo-detalhes mb-3 text-center">${lugar.nome}</h2>
-                <img src="${lugar.imagemPrincipal.url}" class="img-principal mb-3 d-block mx-auto rounded shadow" alt="${lugar.nome}">
-                <p class="fonte-imagem text-center fst-italic mb-4">Fonte da imagem: ${lugar.imagemPrincipal.Fonte}</p>
-                <p class="descricao-detalhes text-center fs-5">${lugar.descricao}</p>
-                <div class=" galeria d-flex justify-content-center flex-wrap gap-3 mt-4">
-                    ${lugar.Imagens.map(img => `<img src="${img}" class="img-secundaria rounded shadow-sm" alt=" "
-                    width="300" height="300">`).join('')}
-                </div>
-                <p class="fonte-imagem text-center fst-italic mt-3">Fonte: ${lugar.Fonte2}</p>
-            `;
-        } else {
-            document.getElementById('tela').innerHTML = `<p>Lugar não encontrado.</p>`;
-        }
-
-    </script>
-
 </body>
-
 </html>
